# Learn_OpenGL

./: .gitignore  Learn_OpenGL.sln
1.1.hello_window/: 1.1.hello_window.vcxproj  1.1.hello_window.vcxproj.filters  CMakeLists.txt  hello_window.cpp
1.2.1.2_triangles/: 1.2.1.2_triangles.vcxproj  1.2.1.2_triangles.vcxproj.filters  2_triangles.cpp  CMakeLists.txt
1.2.hello_triangle/: 1.2.hello_triangle.vcxproj  1.2.hello_triangle.vcxproj.filters  CMakeLists.txt  hello_triangle.cpp
1.3.Shaders/: 1.3.Shaders.vcxproj  1.3.Shaders.vcxproj.filters  CMakeLists.txt  Shaders.cpp
1.4.Textures/: 1.4.Textures.vcxproj  1.4.Textures.vcxproj.filters  CMakeLists.txt  Textures.cpp  shader.fs  shader_s.h
1.5.Transformations/: 1.5.Transformations.vcxproj  1.5.Transformations.vcxproj.filters  CMakeLists.txt  Transformations.cpp
1.6.Coordinate_Systems/: 1.6.Coordinate_Systems.vcxproj  1.6.Coordinate_Systems.vcxproj.filters  CMakeLists.txt  Coordinate_Systems.cpp
1.7.Camera/: 1.7.Camera.vcxproj  1.7.Camera.vcxproj.filters  CMakeLists.txt  Camera.cpp  shader.fs
2.1-Colors/: 2.1-Colors.vcxproj  2.1-Colors.vcxproj.filters  CMakeLists.txt  colors.cpp  shader_m.h
2.2-Basic Lighting/: 2.2-Basic Lighting.vcxproj.filters  basic_lighting.cpp
2.2-Basic_Lighting/: 2.2-Basic Lighting.vcxproj  CMakeLists.txt  phong_shader.frag  phong_shader.vert
2.3-Materials/: 2.3-Materials.vcxproj  2.3-Materials.vcxproj.filters  CMakeLists.txt  glad.c  gouraud_shader.vert  materials.cpp  shader.frag
2.4-Lighting_maps/: 2.4-Lighting_maps.vcxproj  2.4-Lighting_maps.vcxproj.filters  CMakeLists.txt  lighting_maps.cpp  shader.frag
2.5-Light_casters/: 2.5-Light_casters.vcxproj  2.5-Light_casters.vcxproj.filters  CMakeLists.txt  Camera.h  light_casters.cpp  shader.frag
2.6-Multiple_lights/: 2.6-Multiple_lights.vcxproj  2.6-Multiple_lights.vcxproj.filters  CMakeLists.txt  multiple_lights.cpp  shader.frag
3.1-Mesh/: 3.1-Mesh.vcxproj  3.1-Mesh.vcxproj.filters  CMakeLists.txt  main.cpp  mesh.h  shader.frag
3.2-Model/: 3.2-Model.vcxproj  3.2-Model.vcxproj.filters  CMakeLists.txt  main.cpp  mesh.h  model.h  model2.h  shader.frag  simple_shader.frag  simple_shader.vert
4.1-Depth_testing/: 4.1-Depth_testing.vcxproj  4.1-Depth_testing.vcxproj.filters  CMakeLists.txt  camera.h  main.cpp  shader.vert  simple_shader.frag
4.10-Instancing/: 4.10-Instancing.vcxproj  4.10-Instancing.vcxproj.filters  CMakeLists.txt  main.cpp
4.10-Instancing/shaders/: instanceShader.vert  rockShader.frag  rockShader.vert  shader.frag  shader.vert
4.2-Stencil_testing/: 4.2-Stencil_testing.vcxproj  4.2-Stencil_testing.vcxproj.filters  CMakeLists.txt  main.cpp
4.3-Blending/: 4.3-Blending.vcxproj  4.3-Blending.vcxproj.filters  CMakeLists.txt  main.cpp  model.h
4.4-Face_culling/: 4.4-Face_culling.vcxproj  4.4-Face_culling.vcxproj.filters  CMakeLists.txt  main.cpp
4.4-Face_culling/objects/floor/: floor.mtl
4.4-Face_culling/shaders/: shader.frag
4.5-Framebuffers/: 4.5-Framebuffers.vcxproj  4.5-Framebuffers.vcxproj.filters  CMakeLists.txt  main.cpp
4.5-Framebuffers/include/learnopengl/: mesh.h
4.5-Framebuffers/objects/grass/: grass.mtl
4.5-Framebuffers/shaders/: Effect_kernels.txt  screenShader.frag  screenShader.vert
4.6-Cubemaps/: 4.6-Cubemaps.vcxproj  4.6-Cubemaps.vcxproj.filters  CMakeLists.txt  main.cpp
4.6-Cubemaps/include/learnopengl/: model.h
4.6-Cubemaps/shaders/: phongShader.frag  reflectionShader.frag  reflectionShader.vert  refractionShader.frag
4.8-Advanced_GLSL/: 4.8-Advanced_GLSL.vcxproj  4.8-Advanced_GLSL.vcxproj.filters  CMakeLists.txt  main.cpp
4.9-Geometry_Shader/: 4.9-Geometry_Shader.vcxproj  4.9-Geometry_Shader.vcxproj.filters  CMakeLists.txt  explosionShader.frag  explosionShader.geom  explosionShader.vert  main.cpp  mesh2.h  model2.h  normalShader.geom  normalShader.vert  shader2.h
4.9-Geometry_Shader/shaders/: light_cube.vert  phongShader.vert  skyboxShader.vert
5.1-Advanced_Lighting/: 5.1-Advanced_Lighting.vcxproj  5.1-Advanced_Lighting.vcxproj.filters  CMakeLists.txt  imgui.ini  main.cpp
5.1-Advanced_Lighting/shaders/: blinnPhongShader.frag  blinnPhongShader.vert
5.3.1-Shadow_Mapping/: 5.3.1-Shadow_Mapping.vcxproj  5.3.1-Shadow_Mapping.vcxproj.filters  CMakeLists.txt  debugDepthQuad.frag  imgui.ini  main.cpp
5.3.1-Shadow_Mapping/imgui/: CMakeLists.txt
5.3.1-Shadow_Mapping/objects/floor/: floor.mtl
5.3.1-Shadow_Mapping/shaders/: shader.frag  shader.vert
5.3.2-Point_Shadows/: 5.3.2-Point_Shadows.vcxproj  5.3.2-Point_Shadows.vcxproj.filters  CMakeLists.txt  imgui.ini  main.cpp
5.3.2-Point_Shadows/imgui/: CMakeLists.txt
5.3.2-Point_Shadows/objects/floor/: floor.mtl
5.3.2-Point_Shadows/shaders/: depthShader.geom  lightShader.vert  shader.frag  shader.vert
includes/glad/: glad.h
includes/learnopengl/: camera.h  mesh.h  model.h  shader.h
lib/: assimp-vc143-mt.lib  glfw3.lib
